src/blocks/homepage-articles/view.scss
@import "sass/variables";
@import "sass/mixins";

.wp-block-newspack-blocks-homepage-articles {
	article {
		margin-bottom: 1em;
		word-break: break-word;
		overflow-wrap: break-word;

		&:not(:last-child) {
			margin-bottom: 1.5em;
		}
	}

	/* Section header */
	.article-section-title {
		font-size: $font__size-sm;
		font-weight: bold;
		margin-bottom: 0.5em;
		width: 100%; // make sure this isn't caught up in the flex styles.
	}

	/* Column styles */
	&.is-grid {
		display: flex;
		flex-wrap: wrap;
		justify-content: space-between;
		padding: 0;
		list-style: none;

		article {
			width: 100%;
		}
	}

	@include media(tablet) {
		@for $i from 2 through 6 {
			&.columns-#{ $i } article {
				width: calc( ( 100% / #{$i} ) - 12px );
			}
		}
	}

	/* Image styles */

	&.image-alignleft,
	&.image-alignright {
		.article-has-image {
			display: flex;

			.article-thumbnail,
			.article-wrapper {
				flex-basis: 50%;
			}
		}

		&.image-scale4 {
			.article-thumbnail {
				flex-basis: 75%;
			}
			.article-wrapper {
				flex-basis: 25%;
			}
		}

		// .image-scale3 is the default - 50%

		&.image-scale2 {
			.article-thumbnail {
				flex-basis: 33%;
			}
			.article-wrapper {
				flex-basis: 67%;
			}
		}

		&.image-scale1 {
			.article-thumbnail {
				flex-basis: 25%;
			}
			.article-wrapper {
				flex-basis: 75%;
			}
		}
	}

	&.image-alignleft {
		.article-thumbnail {
			margin-right: 16px;
		}
	}

	&.image-alignright {
		.article-thumbnail {
			margin-left: 16px;
		}
		.article-wrapper {
			order: -1;
		}
	}

	/* Headings */
	// This may be removeable, depending on the theme sizing.
	.article-title {
		margin: 0;
		a {
			color: inherit;
			text-decoration: none;

			&:hover {
				color: inherit;
			}
		}
	}

	/* Article meta */
	.article-meta {
		display: flex;
		flex-wrap: wrap;
		align-items: center;
		margin-top: 0.5em;

		.author-name:not(:last-child) {
			margin-right: 0.5em;
		}
	}

	.avatar {
		border-radius: 100%;
		display: block;
		height: 36px;
		margin-right: 0.5em;
		width: 36px;
	}
}

/* Some really rough font sizing */
.wp-block-newspack-blocks-homepage-articles {
	/* 'Normal' size */
	article {
		.article-title {
			font-size: 24px;
		}
		.article-meta {
			font-size: 16px;
		}
		.avatar {
			height: 36px;
			width: 36px;
		}

		@include media(tablet) {
			.article-title {
				font-size: 32px;
			}
		}
	}

	&.type-scale8 article {
		.article-title {
			font-size: 44px;
		}
		@include media(tablet) {
			.article-title {
				font-size: 68px;
			}
			.avatar {
				height: 48px;
				width: 48px;
			}
		}
		@include media(desktop) {
			.article-title {
				font-size: 80px;
			}
		}
	}

	&.type-scale7 article {
		.article-title {
			font-size: 40px;
		}
		@include media( tablet) {
			.article-title {
				font-size: 56px;
			}
			.avatar {
				height: 48px;
				width: 48px;
			}
		}
		@include media(desktop) {
			.article-title {
				font-size: 68px;
			}
		}
	}

	&.type-scale6 article {
		.article-title {
			font-size: 36px;
		}
		@include media(tablet) {
			.article-title {
				font-size: 48px;
			}
			.avatar {
				height: 44px;
				width: 44px;
			}
		}
		@include media(desktop) {
			.article-title {
				font-size: 60px;
			}
		}
	}

	&.type-scale5 article {
		.article-title {
			font-size: 28px;
		}
		@include media(tablet) {
			.article-title {
				font-size: 44px;
			}
			.avatar {
				height: 40px;
				width: 40px;
			}
		}
	}

	/* Type Scale 4: default */

	&.type-scale3 article {
		.article-title {
			font-size: 20px;
		}
		.article-wrapper p {
			font-size: 16px;
		}
		.article-meta {
			font-size: 14px;
		}
		.avatar {
			height: 32px;
			width: 32px;
		}
		@include media(tablet) {
			.article-title {
				font-size: 24px;
			}
		}
	}

	&.type-scale2 article {
		.article-title {
			font-size: 18px;
			@include media(tablet) {
				font-size: 20px;
			}
		}
		.article-wrapper p {
			font-size: 16px;
		}
		.article-meta {
			font-size: 14px;
		}
		.avatar {
			height: 28px;
			width: 28px;
		}
	}

	&.type-scale1 article {
		.article-title {
			font-size: 16px;
		}
		.article-wrapper p,
		.article-meta {
			font-size: 14px;
		}
		.avatar {
			height: 24px;
			width: 24px;
		}
	}
}

